fix macro flex-wrap for 0.8.6

--- a/src/mobile-improvements.scss
+++ b/src/mobile-improvements.scss
@@ -134,6 +134,7 @@ html {
     margin: 0;
     padding: 0;
     justify-content: center;
+    flex-wrap: wrap;
   }
   #hotbar .macro {
     margin: 2px;
